--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
                     <div class="col p-2">
                       <div class="fs-2 text-light">
-                        <div>Amaucci Giacomo</div>
+                        <div>Amaducci Giacomo</div>
                       </div>
                     </div>
 
