Consegna C4: mid-fidelty
Aggiunti documento di spiegazione design e README per peerreview

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <svg viewBox="0 0 30 120" width="30" height="120" xmlns="http://www.w3.org/2000/svg">
                       <circle stroke="#333" cx="15" cy="15" r="12" stroke-width="3" fill="none"/>
                       <text x="15" y="20" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="#333">C3</text>
-                      <!-- <rect width="3" height="90" x="13" y="30" rx="2" ry="2" fill="#333" /> -->
+                      <rect width="3" height="90" x="13" y="30" rx="2" ry="2" fill="#333" />
                     </svg>
                   </div>
 
@@ -149,6 +149,28 @@
                     <a href="https://github.com/cespuglioexe/progetto-hci/blob/main/C3/Task,%20Storyboard%20e%20Primi%20Prototipi.pdf" class="fs-3 text-dark">Primi Prototipi</a>
                     <div class="fs-10">Definizione dei task, effettuando anche task-analysis, costruzione della storyboard e sviluppo dei primi prototipi wireframe</div>
                   </div>
+
+                </div>
+              </div>
+
+              <!-- CONSEGNA 4 : MID-FIDELTY PROTOTYPE -->
+              <div class="container-sm auto-fit">
+                <div class="row">
+
+                  <div class="col d-flex flex-column p-0 roadmap-entry text-end">
+                    <a href="https://github.com/cespuglioexe/progetto-hci/blob/main/C2/Mid-fidelty%20Prototype.pdf" class="fs-3 text-dark">Prototipo mid-fidelty</a>
+                    <div class="fs-10">Sviluppo di un prototipo avanzato, ma non ancora finale.</div>
+                  </div>
+
+                  <div class="col d-flex justify-content-center roadmap-graphic">
+                    <svg viewBox="0 0 30 120" width="30" height="120" xmlns="http://www.w3.org/2000/svg">
+                      <circle stroke="#333" cx="15" cy="15" r="12" stroke-width="3" fill="none"/>
+                      <text x="15" y="20" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="#333">C4</text>
+                      <!-- <rect width="3" height="90" x="13" y="30" rx="2" ry="2" fill="#333" /> -->
+                    </svg>
+                  </div>
+
+                  <div class="col d-flex flex-column justify-content-start roadmap-entry"></div>
 
                 </div>
               </div>
@@ -164,40 +186,26 @@
         <div class="container">
           <div id="Prototipi" class="fs-1 text-center p-0 fw-bold p-5">Prototipi</div>
           <div class="container-sm auto-fit mx-auto p-3">
-            <div class="fs-5 text-center mb-3">Qui trovate i prototipi interattivi del progetto. Cliccate per aprire in una nuova scheda o interagire direttamente se il vostro browser lo supporta.</div>
+            <div class="fs-5 text-center mb-3">Qui trovate il prototipo più corrente del nostro progetto.</div>
 
-              <div class="col-12">
-                <div class="card p-2 prototipi-card">
-                  <div class="card-body">
-                    <div class="figma-embed-wrapper">
-                      <iframe
-                        class="figma-embed aspect-16-9 figma-embed--site"
-                        title="Prototipo Web-app — StudiaMi"
-                        aria-label="Prototipo interattivo della web-app StudiaMi"
-                        loading="lazy"
-                        src="https://embed.figma.com/proto/guzu0BoPqb3cZPOadyGnky/Prototipo-Sito?page-id=0%3A1&node-id=3-3&p=f&viewport=76%2C120%2C0.21&scaling=contain&content-scaling=fixed&starting-point-node-id=3%3A3&embed-host=share"
-                        allowfullscreen>
-                      </iframe>
+              <div class="row">
+                <div class="col-12">
+                  <div class="card p-2 prototipi-card">
+                    <div class="card-body">
+                      <div class="figma-embed-wrapper">
+                        <iframe
+                          class="figma-embed aspect-9-16 figma-embed--app"
+                          title="Prototipo Applicazione mobile — StudiaMi"
+                          aria-label="Prototipo interattivo dell'app mobile StudiaMi"
+                          loading="lazy"
+                          src="https://embed.figma.com/proto/JkM2FKb7pvhIXKjbnmPbLp/Prototipo-app?page-id=1%3A286&node-id=414-1847&p=f&viewport=-1157%2C2109%2C0.39&scaling=scale-down&content-scaling=fixed&starting-point-node-id=414%3A1847&embed-host=share"
+                          allowfullscreen>
+                        </iframe>
+                      </div>
                     </div>
+                  </div>
                 </div>
               </div>
-
-              <div class="col-12">
-                <div class="card p-2 prototipi-card">
-                  <div class="card-body">
-                    <div class="figma-embed-wrapper">
-                      <iframe
-                        class="figma-embed aspect-9-16 figma-embed--app"
-                        title="Prototipo Applicazione mobile — StudiaMi"
-                        aria-label="Prototipo interattivo dell'app mobile StudiaMi"
-                        loading="lazy"
-                        src="https://embed.figma.com/proto/docOcLl7fUZHS2x1KVXkcN/Prototipo-App?page-id=0%3A1&node-id=4-5&viewport=-30%2C264%2C0.51&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=4%3A5&embed-host=share"
-                        allowfullscreen>
-                      </iframe>
-                    </div>
-                </div>
-              </div>
-
           </div>
         </div>
       </div>
