Aggiunta cartella C5, aggiornato index.html

--- a/index.html
+++ b/index.html
@@ -166,11 +166,33 @@
                     <svg viewBox="0 0 30 120" width="30" height="120" xmlns="http://www.w3.org/2000/svg">
                       <circle stroke="#333" cx="15" cy="15" r="12" stroke-width="3" fill="none"/>
                       <text x="15" y="20" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="#333">C4</text>
-                      <!-- <rect width="3" height="90" x="13" y="30" rx="2" ry="2" fill="#333" /> -->
+                      <rect width="3" height="90" x="13" y="30" rx="2" ry="2" fill="#333" />
                     </svg>
                   </div>
 
                   <div class="col d-flex flex-column justify-content-start roadmap-entry"></div>
+
+                </div>
+              </div>
+
+              <!-- CONSEGNA 5 : VALUTAZIONE EURISTICA -->
+              <div class="container-sm auto-fit">
+                <div class="row">
+
+                  <div class="col d-flex flex-column justify-content-start roadmap-entry"></div>
+
+                  <div class="col d-flex justify-content-center roadmap-graphic">
+                    <svg viewBox="0 0 30 120" width="30" height="120" xmlns="http://www.w3.org/2000/svg">
+                      <circle stroke="#333" cx="15" cy="15" r="12" stroke-width="3" fill="none"/>
+                      <text x="15" y="20" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="#333">C5</text>
+                      <!-- <rect width="3" height="90" x="13" y="30" rx="2" ry="2" fill="#333" /> -->
+                    </svg>
+                  </div>
+
+                  <div class="col d-flex flex-column p-0 roadmap-entry">
+                    <a href="https://github.com/cespuglioexe/progetto-hci/blob/main/C5/C5%20-%20Valutazione%20Euristica.pdf" class="fs-3 text-dark">Valutazione euristica</a>
+                    <div class="fs-10">Valutazione del progetto mid-fidelty del progetto Life@Park seconde le euristiche di Nielsen</div>
+                  </div>
 
                 </div>
               </div>
